# Heart-Disease-Prediction-Project

./: README.md  feature_names.json  index.html  standard_scaler.pkl
heart-failure-api/: index.html  main.py  pyproject.toml
heart-failure-api/model/: hard_vote_model.pkl  label_encodings.json  onehot_feature_names.json  robust_scaler.pkl
heart-failure-api/src/heart_failure_api/: schemas.py
